--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -231,14 +231,12 @@
 			<tr>
 				<th scope="row">6</th>
 				<td>30 kwietnia 2025</td>
-				<td class="schedule-lecture">edukacja</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4">수능에 국가 시계 맞춰진 한국의 독특한 문화</a></td>
+				<td class="schedule-lecture" rowspan="2">edukacja</td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4">수능에 국가 시계 맞춰진 한국의 독특한 문화</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
 				<td>7 maja 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="6">8</th>
