--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
@@ -12,8 +12,7 @@
 </head><body class="home">
 
 <div class="exam-question">
-
-<h1>Lektorat języka koreańskiego - poziom 5 (czytanie)<br><br>Arkusz 1</h1>
+<h1>Lektorat języka koreańskiego - poziom 5 (czytanie)<br><br>Arkusz 2</h1>
 	<h2>[21~22]. 다음을 읽고 물음에 답하십시오.</h2>
 	<ul>
 		<li>선수 - zawodnik</li>
@@ -81,7 +80,6 @@
 		<li>아쉽고 걱정스럽다</li>
 		<li>기쁘고 자랑스럽다</li>
 	</ol>
-</div>
 	<h3>24. 윗글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
 		<li>나는 아버지의 물건을 많이 가지고 있다.</li>
@@ -91,182 +89,163 @@
 	</ol>
 </div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[25~27] 다음 신문 기사의 제목을 가장 잘 설명한 것을 고르십시오.</h2> -->
-	<!-- <h3>25.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>폭발 - wybuch</li> -->
-		<!-- <li>해외 = 외국</li> -->
-		<!-- <li>광고 - reklama</li> -->
-		<!-- <li>요청 - prośba (o coś)</li> -->
-		<!-- <li>출연하다 - wystąpić</li> -->
-		<!-- <li>잇따르다 - dziać się jedno po drugim</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox">한류 배우 인기 폭발, 해외 광고 요청 줄 이어</div> -->
-	<!-- <ol> -->
-		<!-- <li>한류 배우는 떨어진 인기로 해외 광고에 출연할 기회가 줄어들었다.</li> -->
-		<!-- <li>한류 배우가 인기를 끌기 위해서는 해외 광고에 많이 출연해야 한다.</li> -->
-		<!-- <li>한류 배우는 인기에 상관없이 해외에서 광고 출연 요청을 받고 있다.</li> -->
-		<!-- <li>한류 배우가 큰 인기를 얻으면서 해외 광고 출연 요청이 잇따르고 있다. <strong class="correct">✓</strong></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>26.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>공장 - fabryka</li> -->
-		<!-- <li>정상 - normalność</li> -->
-		<!-- <li>가동 - praca (np. fabryki)</li> -->
-		<!-- <li>반도체 - półprzewodnik</li> -->
-		<!-- <li>공급 - podaż</li> -->
-		<!-- <li>안정 - stabilność</li> -->
-		<!-- <li>미지수 = 알 수 없음</li> -->
-		<!-- <li>생산 - produkcja</li> -->
-		<!-- <li>필수적이다 = 반드시 필요하다</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox">제2공장 정상 가동, 반도체 공급 안정은 미지수</div> -->
-	<!-- <ol> -->
-		<!-- <li>제2공장이 정상적으로 가동됨에 따라 반도체 공급이 안정되었다.</li> -->
-		<!-- <li>제2공장이 반도체 생산을 시작했지만 공급이 안정될지는 불확실하다. <strong class="correct">✓</strong></li> -->
-		<!-- <li>반도체가 안정적으로 공급되기 위해서는 제2공장의 가동이 필수적이다.</li> -->
-		<!-- <li>반도체 공급이 안정적으로 이루어지면서 제2공장도 정상 가동될 수 있었다.</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>27.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>거래 - transakcja</li> -->
-		<!-- <li>사기 - oszustwo</li> -->
-		<!-- <li>급증 = 급격+증가</li> -->
-		<!-- <li>정부 - rząd</li> -->
-		<!-- <li>대책 - środki zaradcze</li> -->
-		<!-- <li>마련 = 준비</li> -->
-		<!-- <li>미흡 - być niewystarczającym</li> -->
-		<!-- <li>수립하다 = 세우다</li> -->
-		<!-- <li>막다 - zatrzymać</li> -->
-		<!-- <li>피해자 - ofiara</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox">온라인 거래 사기 급증, 정부 대책 마련은 미흡</div> -->
-	<!-- <ol> -->
-		<!-- <li>온라인 거래 사기가 늘었지만 정부의 대책 마련은 충분하지 않다. <strong class="correct">✓</strong></li> -->
-		<!-- <li>온라인 시장에서 거래 사기가 증가해 정부가 대책을 수립하고 있다.</li> -->
-		<!-- <li>온라인 거래 사기를 막기 위해 마련한 정부의 대책은 큰 효과가 없었다.</li> -->
-		<!-- <li>온라인 거래 사기 피해자들을 위해 정부가 대책을 마련하겠다고 발표했다.</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[25~27] 다음 신문 기사의 제목을 가장 잘 설명한 것을 고르십시오.</h2>
+	<h3>25.</h3>
+	<ul>
+		<li>지방 = 지역</li>
+		<li>반복하다 - powtarzać</li>
+	</ul>
+	<div class="topik-textbox">중부 지방 비 오락가락, 내일까지 이어져</div>
+	<ol>
+		<li>중부 지방은 내일 하루 종일 비가 내릴 것이다.</li>
+		<li>중부 지방은 비가 그쳤다가 내일 다시 내릴 것이다.</li>
+		<li>중부 지방은 내일까지 쉬지 않고 비가 내릴 것이다.</li>
+		<li>중부 지방은 내일까지 비가 내렸다 그쳤다를 반복할 것이다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>26.</h3>
+	<ul>
+		<li>관중 - widownia</li>
+		<li>몰리다 - gromadzić się</li>
+		<li>호응 - entuzjazm/aprobata (dla czegoś)</li>
+		<li>홍보하다 - promować</li>
+	</ul>
+	<div class="topik-textbox">가수 진영 3년 만의 콘서트에 구름 관중</div>
+	<ol>
+		<li>가수 진영이 3년 만에 콘서트를 열자 수많은 관중이 몰렸다.</li>
+		<li>가수 진영이 3년 내에 다시 콘서트를 열기로 관중에게 약속했다.</li>
+		<li>가수 진영이 3년간 준비한 콘서트를 열었으나 관중의 호응이 적었다.</li>
+		<li>가수 진영이 3년 만에 하는 콘서트에 많은 관중을 모으려고 홍보했다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>27.</h3>
+	<ul>
+		<li>기습 - nagły</li>
+		<li>폭우 - ulewa</li>
+		<li>엉금엉금 - (poruszać się) w żółwim tempie</li>
+		<li>정체 - korek (na ulicy)</li>
+		<li>잇따르다 - dziać się jedno po drugim</li>
+		<li>운행하다 - działać/funkcjonować (o środkach komunikacji)</li>
+		<li>몰리다 - gromadzić się</li>
+		<li>혼잡하다 - być chaotycznym/zatłoczonym</li>
+	</ul>
+	<div class="topik-textbox">기습 폭우에 차량 '엉금엉금', 출근길 정체</div>
+	<ol>
+		<li>폭우로 피해를 입은 차량들이 늘면서 사람들의 출근이 늦어졌다.</li>
+		<li>큰비에 차량 사고가 잇따르면서 출근하던 사람들이 곤란을 겪었다.</li>
+		<li>갑자기 많이 쏟아진 비로 차들이 천천히 운행하면서 출근길이 막혔다.</li>
+		<li>계속된 비에 대중교통 이용자가 한꺼번에 물리면서 출근길이 혼잡해졌다.</li>
+	</ol>
+</div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[28~31] (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2> -->
-	<!-- <h3>28.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>지우개 - gumka do ścierania</li> -->
-		<!-- <li>문구류 - artykuły piśmiennicze</li> -->
-		<!-- <li>닿다 - stykać się</li> -->
-		<!-- <li>(달라)붙다 - przykleić się</li> -->
-		<!-- <li>성질 - własność, właściwość</li> -->
-		<!-- <li>물질 - substancja</li> -->
-		<!-- <li>재료 - składnik</li> -->
-		<!-- <li>고무 - guma</li> -->
-		<!-- <li>분자 - cząstka</li> -->
-		<!-- <li>결합하다 - łączyć się (ze sobą)</li> -->
-		<!-- <li>딱딱하다 - być twardym</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>지우개는 다른 문구류와 오래 닿으면 그것에 달라붙는 성질이 있다. 지우개를 만들 때 넣는 특수한 물질 때문이다. 지우개의 재료인 고무에 약품을 넣으면 고무 분자들이 결합하게 된다. 그런데 고무에 넣은 약품은 플라스틱에 들어가면 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 한다. 이 때문에 지우개와 플라스틱 문구류를 함께 두면 잘 붙는다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>고무를 달라붙게 <strong class="correct">✓</strong></li> -->
-		<!-- <li>고무를 딱딱하게</li> -->
-		<!-- <li>문구류와 붙지 않게</li> -->
-		<!-- <li>문구류에 닿지 않게</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>29.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>날다 - latać</li> -->
-		<!-- <li>멸종 - wyginięcie</li> -->
-		<!-- <li>천적 - naturalny wróg</li> -->
-		<!-- <li>풍부하다 = 아주 많다</li> -->
-		<!-- <li>서식지 - siedlisko</li> -->
-		<!-- <li>유입 - wprowadzenie, introdukcja</li> -->
-		<!-- <li>법 = 방법</li> -->
-		<!-- <li>사라지다 - zniknąć</li> -->
-		<!-- <li>인생 = 삶</li> -->
-		<!-- <li>구체적 - konkretny</li> -->
-		<!-- <li>주어지다 - być danym</li> -->
-		<!-- <li>환경 - środowisko</li> -->
-		<!-- <li>안주하다 - zadowolić się, poprzestać (na czymś)</li> -->
-		<!-- <li>남 = 다른 사람</li> -->
-		<!-- <li>현실 - rzeczywistość</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>도도새는 날지 못해 멸종된 새이다. 도도새는 천적이 없고 먹이가 풍부한 곳에 살았기 때문에 날 필요가 없었고 날려고 하지도 않았다. 그러다 도도새의 서식지에 인간과 다른 동물들이 유입되었다. 나는 법을 잊어버린 도도새는 도망가지 못해 모두 잡아먹혔고 마침내 이 세상에서 사라져 버렸다. 이처럼 우리도 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 결국에는 모든 것을 잃어버리게 될 것이다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>인생을 구체적으로 계획해 살지 않으면</li> -->
-		<!-- <li>주어진 환경에 안주하여 노력하지 않으면 <strong class="correct">✓</strong></li> -->
-		<!-- <li>내가 가진 것에 감사하지 않고 남과 비교하면</li> -->
-		<!-- <li>인간관계가 힘들어 현실로부터 도망쳐 버리면</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>30.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>수학 - matematyka</li> -->
-		<!-- <li>개념 - pojęcie</li> -->
-		<!-- <li>정립하다 - ustanowić</li> -->
-		<!-- <li>기호 - symbol (np. matematyczny)</li> -->
-		<!-- <li>등장하다 - pojawić się</li> -->
-		<!-- <li>가리키다 - wskazać</li> -->
-		<!-- <li>무한대 - nieskończoność</li> -->
-		<!-- <li>정반대 - całkowite przeciwieństwo</li> -->
-		<!-- <li>학자 - naukowiec</li> -->
-		<!-- <li>파악하다 - rozpoznać, zidentyfikować, zrozumieć, wyczuć</li> -->
-		<!-- <li>여기다 - uważać</li> -->
-		<!-- <li>-계 - świat (np. nauki)</li> -->
-		<!-- <li>정의하다 - zdefiniować</li> -->
-		<!-- <li>시도하다 - próbować</li> -->
-		<!-- <li>활발하다 - być aktywnym (np. w działaniu)</li> -->
-		<!-- <li>연구하다 - badać, prowadzić badania (np. naukowe)</li> -->
-		<!-- <li>이론 - teoria</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>보통 수학에서는 개념이 먼저 정립되고 기호가 등장한다. 그러나 수가 끝없이 커지는 상태를 가리키는 무한대의 경우에는 정반대이다. 무한대는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 후에도 한동안 개념이 정립되지 못했다. 왜냐하면 당시의 학자들은 무한대를 인간의 능력으로는 파악할 수 없다고 여겼기 때문이다. 그래서 수학계에서 무한대를 정의하는 것은 오랫동안 시도되지 않았다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>기호가 만들어진 <strong class="correct">✓</strong></li> -->
-		<!-- <li>의미가 여러 번 바뀐</li> -->
-		<!-- <li>학계에서 활발히 연구된</li> -->
-		<!-- <li>반대되는 이론이 등장한</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>31.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>업체 - przedsiębiorstwo</li> -->
-		<!-- <li>진출하다 - rozszerzać działalność</li> -->
-		<!-- <li>현지 - lokalny, regionalny</li> -->
-		<!-- <li>상품 - towar, produkt</li> -->
-		<!-- <li>전략 - strategia</li> -->
-		<!-- <li>취향 - upodobania</li> -->
-		<!-- <li>맞추다 - dostosować</li> -->
-		<!-- <li>성공하다 - osiągnąć sukces</li> -->
-		<!-- <li>빠뜨리다 - pominąć</li> -->
-		<!-- <li>기호 - gust</li> -->
-		<!-- <li>특성 - cechy szczególne</li> -->
-		<!-- <li>감추다 - ukryć</li> -->
-		<!-- <li>재현하다 - odtworzyć</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>최근 한국의 편의점 업체가 해외로 진출하면서 현지에서 큰 인기를 끌고 있다. 인테리어에서 판매 상품까지 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 전략을 썼기 때문이다. 보통 마트가 해외에 진출할 때는 현지인의 취향에 맞추려고 하는데 이 편의점 업체는 이와 반대되는 방법을 써서 성공한 것이다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>빠뜨리지 않고 홍보하는</li> -->
-		<!-- <li>판매자의 기호에 맞추는</li> -->
-		<!-- <li>편의점의 특성을 최대한 감추는</li> -->
-		<!-- <li>한국 편의점을 그대로 재현하는 <strong class="correct">✓</strong></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[28~31] (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>28.</h3>
+	<ul>
+		<li>따로 - oddzielnie</li>
+		<li>등장하다 - pojawić się</li>
+		<li>분량 - długość</li>
+		<li>화면 - ekran</li>
+		<li>피로하다 - męczyć się</li>
+		<li>줄 - linia</li>
+		<li>간격 - odstęp</li>
+		<li>편집하다 - edytować</li>
+		<li>등장인물 - bohater (np. książki)</li>
+		<li>제한하다 - ograniczać</li>
+		<li>기존(의) - istniejący</li>
+		<li>각색하다 - dokonać adaptacji (np. teatralnej, filmowej, itp.)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>사람들은 문화생활을 위한 시간을 따로 내기가 어렵다고들 한다. 최근 이런 사람들을 위해 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 새로운 문화 콘텐츠들이 등장하고 있다. 그중 하나가 웹 소설인데 이것은 5분 이내 읽을 수 있는 짧은 분량의 인터넷 소설을 말한다. 이 소설은 컴퓨터 화면에서 읽어도 눈이 피로하지 않도록 줄 간격이 넓게 편집되어 있다. 그리고 소설의 내용을 쉽게 이해할 수 있도록 등장인물의 수를 제한하는 것도 특징이다.</p>
+	</div>
+	<ol>
+		<li>재미있는 내용으로 관심을 끄는</li>
+		<li>현대의 사람들을 등장인물로 하는</li>
+		<li>유행했던 기존의 소설을 각색해서 만든</li>
+		<li>짧을 시간 동안 부담 없이 즐길 수 있는</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>29.</h3>
+	<ul>
+		<li>취재 - relacjonowanie (np. wydarzenia)</li>
+		<li>경계선 - linia graniczna</li>
+		<li>과열하다 - przegrzać się</li>
+		<li>불상사 - wypadek, skandal</li>
+		<li>예방하다 - przeciwdziałać</li>
+		<li>설정하다 - ustawić</li>
+		<li>화제 - temat (np. rozmowy)</li>
+		<li>합의하다 - porozumieć się</li>
+		<li>언론계 - prasa, media</li>
+		<li>원활하다 - odbywać się bez przeszkód</li>
+		<li>보도 - relacja (np. z wydarzenia)</li>
+		<li>무너지다 - załamać/zawalić się</li>
+		<li>해석하다 - zinterpretować</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>취재 경계선은 취재가 과열되어 발생할 수 있는 불상사를 예방하기 위해 설정한 것이다. 수백 명의 취재진이 화제의 인물에게 몰려들 경우 사고가 발생해 취재를 망칠 수 있다. 그래서 선을 그어 놓고 그 바깥에서 취재하자는 합의를 본 것이다. 비록 법으로 정해져 있지 않지만 언론계가 이 선을 지키려고 노력하는 것은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 순간 원활한 보도가 어려워진다는 것을 누구보다 잘 알고 있기 때문이다.</p>
+	</div>
+	<ol>
+		<li>취재 정보를 공유하는</li>
+		<li>취재 경계선이 무너지는</li>
+		<li>취재 내용을 잘못 해석하는</li>
+		<li>취재 경계선이 새로 설정되는</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>30.</h3>
+	<ul>
+		<li>받아들이다 - przyjmować (coś do siebie)</li>
+		<li>연인 - ukochana osoba</li>
+		<li>헤어지다 - rozstać się</li>
+		<li>노래 가사 - tekst piosenki</li>
+		<li>양 = 것처럼</li>
+		<li>쳐다보다 - wpatrywać się</li>
+		<li>임신부 - kobieta w ciąży</li>
+		<li>투영하다 - odbić, odzwierciedlić</li>
+		<li>유사성 - podobieństwo</li>
+		<li>공감하다 - wczuć się (w coś)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>인간은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 중심으로 세상일을 받아들인다. 연인과 헤어진 뒤 듣는 노래 가사는 전부 자신의 이야기인 양 생각하고, 어쩌다 머리 모양이 마음에 안 드는 날은 모두 자기만 쳐다보는 것처럼 느끼기도 한다. 고등학생은 이 세상에 자기들만 사는 것처럼 행동하고, 아이를 임신한 사람은 길거리에서 유난히 임신부만 눈에 들어온다. 이렇듯 우리는 세상의 많은 사건들에 자신을 투영해 유사성을 발견하고 이에 공감하며 살아간다.</p>
+	</div>
+	<ol>
+		<li>자기 자신을</li>
+		<li>세상의 사건을</li>
+		<li>눈에 보이는 일을</li>
+		<li>같은 입장에 있는 사람을</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>31.</h3>
+	<ul>
+		<li>풍부하다 - być bogatym (np. w surowce)</li>
+		<li>자원 - surowce</li>
+		<li>조건 - warunek</li>
+		<li>천연 - naturalny</li>
+		<li>갖추다 - osiągać, posiadać</li>
+		<li>의존하다 - być zależnym</li>
+		<li>산업 - przemysł</li>
+		<li>제조업 - przemysł wytwórczy</li>
+		<li>투자 - inwestycja</li>
+		<li>빈약하다 = 부족하다</li>
+		<li>생산 - produkcja</li>
+		<li>능력 - możliwości</li>
+		<li>무리하다 - przesadzić, przedobrzyć</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>풍부한 자원은 경제 성장의 필요조건이지 충분조건은 아니다. 풍부한 천연자원을 갖추고 있음에도 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 경우도 있다. 풍부한 자원에만 의존해 경제 성장의 중심 산업인 제조업이나 서비스업 등에 투자를 하지 않게 되는 것이다. 반면에 천연자원이 빈약해도 새로운 기술 개발이나 교육을 통해 생산 능력을 높이는 나라도 있다.</p>
+	</div>
+	<ol>
+		<li>제조업에 의존하려는</li>
+		<li>자원을 생산하지 못하는</li>
+		<li>경제 발전을 이루지 못하는</li>
+		<li>기술 개발에 무리하게 투자하는</li>
+	</ol>
+</div>
 
 <!-- <div class="exam-question"> -->
 	<!-- <h2>[32~34]. 다음을 읽고 내용이 같은 것을 고르십시오.</h2> -->
