--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3/index.html
@@ -168,11 +168,29 @@
 <h3>번역</h3>
 
 <p>16. 사향 노루</p>
+<ul>
+	<li>Piżmowiec syberyjski</li>
+</ul>
 <p>17-1. DMZ 동부 산악지역은 백두대간과 만나는 곳으로</p>
+<ul>
+	<li>Górzysty region na wschodzie strefy zdemilitaryzowanej to miejsce, gdzie znajduje się pasmo górskie Baekdu-daegan.</li>
+</ul>
 <p>17-2. DMZ에서 가장 원시림에 가까운 곳입니다.</p>
+<ul>
+	<li>Jest to najbardziej zbliżony do pierwotnego lasu obszar w całej strefie.</li>
+</ul>
 <p>18. 천연의 숲 그대로 유지되어 희귀 동식물들이 살고 있습니다.</p>
+<ul>
+	<li>W tak zachowanym naturalnym lesie żyją rzadkie gatunki zwierząt i roślin.</li>
+</ul>
 <p>19. 멸종위기종 사향노루도 DMZ의 동부 산악지역에서 발견되었습니다.</p>
+<ul>
+	<li>Zagrożony wyginięciem piżmowiec syberyjski również został tam zaobserwowany.</li>
+</ul>
 <p>20. 사슴과 중 뿔이 없고 위턱의 송곳니가 길게 자라 입 밖으로 튀어 나와 있는 것이 특징입니다.</p>
+<ul>
+	<li>Cechami wyróżniającymi go wśród rodziny jeleniowatych są brak rogów oraz długie kły, które wyrastają na zewnątrz z górnej szczęki.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -195,11 +213,29 @@
 <h3>번역</h3>
 
 <p>21. 수달</p>
+<ul>
+	<li>Wydra</li>
+</ul>
 <p>22-1. 수달은 남북을 관통하여 흐르는 하천을 자유로이 이동하면서 사는 동물로</p>
+<ul>
+	<li>Wydra to zwierzę żyjące przemieszczając się swobodnie w strumieniach przepływających przez obie Koree.</li>
+</ul>
 <p>22-2. 남북 평화 교류의 상징적 포유동물입니다.</p>
+<ul>
+	<li>Z tego powodu jest ssakiem, który symbolizuje pokojową współpracę między Południem a Północną.</li>
+</ul>
 <p>23. 현재는 서식지 파괴로 개체수가 급감하고 있습니다.</p>
+<ul>
+	<li>Obecnie liczba osobników szybko maleje z powodu niszczenia jej siedlisk.</li>
+</ul>
 <p>24-1. 수달의 앞발과 뒷발에는 넓적한 물갈퀴가 있어</p>
+<ul>
+	<li>Przednie i tylne łapy wydry wyposażone są w szerokie, płaskie błony pławne,</li>
+</ul>
 <p>24-2. 물속의 표범이라고 불릴 만큼 수영 실력이 뛰어납니다.</p>
+<ul>
+	<li>które pozwalają im tak świetnie pływać, że [w Korei] nazywane są wodnymi lampartami plamistymi.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -217,10 +253,25 @@
 <h3>번역</h3>
 
 <p>25. 검독수리</p>
+<ul>
+	<li>Orzeł przedni</li>
+</ul>
 <p>26. 멸종위기종 검독수리는 파주, 철원의 민통선지역에서 유독 많이 월동합니다.</p>
+<ul>
+	<li>Szczególnie duża liczba zagrożonych wyginięciem orłów przednich spędza zimę w strefie zamkniętej dla cywilów w regionach Paju i Cheolwon.</li>
+</ul>
 <p>27. 주민들이 굶주린 검독수리들에게 먹이도 주고 보호하며 자연으로 돌려보내기 때문입니다.</p>
+<ul>
+	<li>Wynika to z faktu, że w tamtym okresie mieszkańcy dokarmiają oraz dają schronienie wygłodzonym orłom.</li>
+</ul>
 <p>28-1. 생물들과 조화롭게 살아가는 민통선지역 주민들의 모습에서</p>
+<ul>
+	<li>Na podstawie tego, jak mieszkańcy strefy zamkniętej żyją w harmonii z innymi stworzeniami,</li>
+</ul>
 <p>28-2. 인간과 자연이 공존하는 DMZ의 미래를 그려볼 수 있습니다.</p>
+<ul>
+	<li>możemy wyobrazić sobie przyszłość strefy DMZ, w której ludzie będą żyć w zgodzie z naturą.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -316,9 +367,21 @@
 <h3>번역</h3>
 
 <p>40. 노란목도리담비</p>
+<ul>
+	<li>Kuna żółtogardła</li>
+</ul>
 <p>41-1. DMZ에서 살고 있는 노란목도리담비는</p>
+<ul>
+	<li>Żyjąca w strefie DMZ kuna żółtogardła</li>
+</ul>
 <p>41-2. 한국의 생태계에서 행동권이 넓고</p>
+<ul>
+	<li>posiada rozległy areał osobniczy w koreańskim ekosystemie,</li>
+</ul>
 <p>41-3. 먹이 피라미드에서 꼭대기에 있는 최고의 포식자 중 하나입니다.</p>
+<ul>
+	<li>a także jest jednym z największych drapieżników znajdujących się na szczycie łańcucha pokarmowego.</li>
+</ul>
 <p>42-1. 2~6마리 정도의 작은 무리를 지어 돌아다니며</p>
 <p>42-2. 덩치가 큰 동물도 사냥할 수 있는 동물입니다.</p>
 
