--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4/index.html
@@ -35,8 +35,17 @@
 <h3>번역</h3>
 
 <p>0. 수능에 국가 시계 맞춰진 한국의 독특한 문화</p>
+<ul>
+	<li>Specyficzna koreańska kultura, w której zegar państwowy dostosowany jest do matury</li>
+</ul>
 <p>1. 한국은 지금 사흘 앞으로 다가온 대학수학능력시험, 이른바 수능시험에 사회의 많은 초점이 맞춰져 있습니다.</p>
+<ul>
+	<li>Całe społeczeństwo w Korei Południowej skupione jest na egzaminie dojrzałości, tzw. <em>suneung</em>, do którego pozostały tylko 3 dni.</li>
+</ul>
 <p>2. 한국의 수능은 수험생은 물론 직장인들의 출근 시간과 군대 훈련, 항공기 이착륙 시간에까지 영향을 미칠 정도로 매우 독특한 문화 속에 진행됩니다.</p>
+<ul>
+	<li>Egzamin odbywa się w wyjątkowej kulturze, która ma wpływ nie tylko na samych maturzystów, ale także na godziny rozpoczęcia pracy, ćwiczenia wojskowe, a nawet godziny startów i lądowań w ruchu powietrznym.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -54,9 +63,21 @@
 <h3>번역</h3>
 
 <p>3. 한국에서 대학수학능력시험은 국가 수장인 대통령에서부터 말단 공무원까지 촉각을 곤두세우는 국가적 행사입니다.</p>
+<ul>
+	<li>W Korei Południowej jest to państwowe wydarzenie, na którym uwagę skupiają władze państwowe, począwszy od prezydenta jako jako głowy państwa aż po urzędników na niższych szczeblach.</li>
+</ul>
 <p>4-1. 미국 등 다른 나라도 대학 입학을 위한 다양한 시험제도가 있지만,</p>
+<ul>
+	<li>W Stanach Zjednoczonych oraz innych krajach także istnieją różne systemy egzaminów wstępnych na studia,</li>
+</ul>
 <p>4-2. 단 한 번의 시험으로 중요한 결정을 해야 하는 한국의 수능 당일 표정은</p>
+<ul>
+	<li>jednak atmosfera w Korei w dniu egzaminu dojrzałości przesądzającym o dalszym życiu maturzysty</li>
+</ul>
 <p>4-3. 세계적으로도 매우 독특해 자주 조명을 받습니다.</p>
+<ul>
+	<li>jest fenomenem na skalę światową, przez co często znajduje się w centrum uwagi.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -84,7 +105,13 @@
 <h3>번역</h3>
 
 <p>5. 수험생과 학부모는 물론, 직장인들의 출퇴근 시간, 경찰의 특별 근무, 심지어 군대와 항공기 운항에까지 다양한 영향을 미치기 때문입니다.</p>
+<ul>
+	<li>Dzieje się tak ze względu na ogromny jej wpływ nie tylko na maturzystów i ich rodziców, ale również i na godziny rozpoczęcia pracy, wysyłanie specjalnych patroli policji, a nawet organizację działań wojskowych oraz transportu lotniczego.</li>
+</ul>
 <p>6. 김상곤 부총리는 “공공기관 출근 시간 조정, 기상정보 제공, 시험장 인근 교통관리 강화, 영어 듣기평가 시험 중 소음 방지를 위한 항공기 이착륙 시간 조정, 군사 훈련 자제 등의 조치들을 각 관계부처의 협조 등을 통해 실시할 계획입니다.”라고 말했다.</p>
+<ul>
+	<li>Wicepremier Kim Sang-gon zapowiedział: "Przy wsparciu odpowiednich instytucji planujemy wdrożenie środków, takich jak dostosowanie czasu pracy urzędów publicznych, udostępnienie informacji o warunkach atmosferycznych, wzmocnienie sterowania ruchem na drogach w pobliżu miejsc przeprowadzania egzaminu, dostosowanie startów i lądowań statków powietrznych w celu zapobieżenia hałasowi podczas egzaminu ze słuchania z języka angielskiego, a także wstrzymanie treningów wojskowych."</li>
+</ul>
 
 <h3>어휘</h3>
 
