--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -152,8 +152,8 @@
 			<tr>
 				<th scope="row">8</th>
 				<td>7 May 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">North Korea</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/8">"北, 러에 10대 초짜 파병...총알받이로 팔아넘긴 것"</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">9</th>
