--- a/uj/index.html
+++ b/uj/index.html
@@ -24,13 +24,30 @@
 
 <h2>Zajęcia</h2>
 
-<h3>Semestr letni 2024/2025</h3>
+<h3>Semestr zimowy 2025/2026</h3>
 
 <ul>
-	<li><a href="uj/zajecia/24-25l/klc2">Korean Language Class (2)</a></li>
-	<li><a href="uj/zajecia/24-25l/ljk5">Lektorat języka koreańskiego - poziom 5</a></li>
-	<li><a href="uj/zajecia/24-25l/mkmb">Modern Korean in Media and Business (3)</a></li>
+	<li>Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</li>
+	<li>Introduction to Asian Studies: overview of research methods</li>
+	<li>Język koreański - poziom 1</li>
+	<li>Język koreański - poziom 2</li>
+	<li>Język koreański - poziom 3</li>
+	<li><a href="uj/zajecia/25-26z/klc3">Korean Language Class (3)</a></li>
+	<li>Legacy and Influence of Confucian Culture on Modern Korean Society</li>
+	<li>Lektorat języka koreańskiego - poziom 4</li>
 </ul>
+
+<details>
+<summary class="h3">Semestr letni 2024/2025</summary>
+
+<ul>
+	<li>Język koreański - poziom 1</li>
+	<li>Język koreański - poziom 2</li>
+	<li>Korean Language Class (2)</li>
+	<li>Lektorat języka koreańskiego - poziom 5</li>
+	<li>Modern Korean in Media and Business (3)</li>
+</ul>
+</details>
 
 <details>
 <summary class="h3">Semestr zimowy 2024/2025</summary>
