--- a/uj/index.html
+++ b/uj/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
 
-	<title>twilczynski.com</title>
+	<title>dr Tomasz Wilczyński, UJ</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
@@ -27,9 +27,9 @@
 <h3>Semestr zimowy 2024/2025</h3>
 
 <ul>
-	<li><!--a href="uj/zajecia/24-25z/assk"-->Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej<!--/a--></li>
+	<li><a href="uj/zajecia/24-25z/assk">Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</a></li>
 	<li><!--a href="uj/zajecia/24-25z/itas"-->Introduction to Asian Studies: overview of research methods<!--/a--></li>
-	<li><!--a href="uj/zajecia/24-25z/klp2"!-->Korean Language Practice (2)</a></li>
+	<li><!--a href="uj/zajecia/24-25z/klc2"!-->Korean Language Class (2)</a></li>
 	<li><a href="uj/zajecia/24-25z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
 	<li><a href="uj/zajecia/24-25z/wats3-1">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</a></li>
 	<li><a href="uj/zajecia/24-25z/wats3-2">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</a></li>
@@ -113,6 +113,18 @@
 
 <ul>
 	<li><a href="uj/referaty/kmu/2023">[2023] 계명 한국어교육 글로벌 컬로퀴엄</a></li>
+</ul>
+
+<h2>Przydatne strony</h2>
+
+<ul>
+	<li><a href="https://stdict.korean.go.kr/main/main.do">국립국어원 표준국어대사전</a></li>
+	<li><a href="https://dict.naver.com">네이버 사전</a></li>
+	<li><a href="http://roman.cs.pusan.ac.kr">로마자 변환기</a></li>
+	<li><a href="https://en.bab.la/dictionary/english-polish">bab.la English-Polish dictionary</a></li>
+	<li><a href="https://pl.wikipedia.org/wiki/Cudzys%C5%82%C3%B3w">Cudzysłów w języku polskim</a></li>
+	<li><a href="https://publications.europa.eu/code/pl/pl-4100100.htm">Interpunkcja w języku polskim</a></li>
+	<li><a href="https://poradniajezykowa.uw.edu.pl/porady/przecinek-na-poczatku-zdania">przecinek na początku zdania</a></li>
 </ul>
 
 </body></html>
