--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -14,7 +14,7 @@
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</h1>
 
 <address>
-	Tomasz Wilczyński<br>
+	dr Tomasz Wilczyński<br>
 	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
 	konsultacje: poniedziałek 10.30–11:30, pokój -1.15
 </address>
@@ -44,20 +44,6 @@
 		<li>69-76%: dostateczny plus</li>
 		<li>61-68%: dostateczny</li>
 		<li>0-60%: niedostateczny</li>
-	</ul>
-</details>
-
-<details>
-	<summary class="h2">Przydatne strony</summary>
-
-	<ul>
-		<li><a href="https://stdict.korean.go.kr/main/main.do">국립국어원 표준국어대사전</a></li>
-		<li><a href="https://dict.naver.com">네이버 사전</a></li>
-		<li><a href="http://roman.cs.pusan.ac.kr">로마자 변환기</a></li>
-		<li><a href="https://en.bab.la/dictionary/english-polish">bab.la English-Polish dictionary</a></li>
-		<li><a href="https://pl.wikipedia.org/wiki/Cudzys%C5%82%C3%B3w">Cudzysłów w języku polskim</a></li>
-		<li><a href="https://publications.europa.eu/code/pl/pl-4100100.htm">Interpunkcja w języku polskim</a></li>
-		<li><a href="https://poradniajezykowa.uw.edu.pl/porady/przecinek-na-poczatku-zdania">przecinek na początku zdania</a></li>
 	</ul>
 </details>
 
@@ -97,6 +83,20 @@
 		<li>niska dzietność</li>
 		<li>opieka psychologiczna/psychiatryczna</li>
 		<li>popkultura</li>
+	</ul>
+</details>
+
+<details>
+	<summary class="h2">Przydatne strony</summary>
+
+	<ul>
+		<li><a href="https://stdict.korean.go.kr/main/main.do">국립국어원 표준국어대사전</a></li>
+		<li><a href="https://dict.naver.com">네이버 사전</a></li>
+		<li><a href="http://roman.cs.pusan.ac.kr">로마자 변환기</a></li>
+		<li><a href="https://en.bab.la/dictionary/english-polish">bab.la English-Polish dictionary</a></li>
+		<li><a href="https://pl.wikipedia.org/wiki/Cudzys%C5%82%C3%B3w">Cudzysłów w języku polskim</a></li>
+		<li><a href="https://publications.europa.eu/code/pl/pl-4100100.htm">Interpunkcja w języku polskim</a></li>
+		<li><a href="https://poradniajezykowa.uw.edu.pl/porady/przecinek-na-poczatku-zdania">przecinek na początku zdania</a></li>
 	</ul>
 </details>
 
