--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Lektorat języka koreańskiego - poziom 4 (czytanie)</title>
+	<title>Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" media="print" href="uj/css/print.css">
 </head><body class="home">
 
-<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)</h1>
+<h1>Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</h1>
 
 <address>
 	dr Tomasz Wilczyński<br>
@@ -24,12 +24,12 @@
 
 	<ul>
 		<li>obecność: 30%</li>
-		<li>kolokwia: 35%</li>
-		<li>egzamin: 35%</li>
+		<li>kolokwia: 30%</li>
+		<li>prezentacja: 40%</li>
 		<li>bonus za obecność: 2%</li>
 	</ul>
 
-	<p>Dwie nieusprawiedliwione nieobecności nie wpływają na ocenę za obecność. Każda kolejna nieobecność skutkuje zmniejszeniem oceny za obecność o 10%, tj. z 30% na 20%, z 20% na 10%, z 10% na 0%. <strong>Warunkiem zaliczenia zajęć jest uczestnictwo w minimum 9 zajęciach oraz napisanie wszystkich kolokwiów i egzaminu.</strong></p>
+	<p>Dwie nieusprawiedliwione nieobecności nie wpływają na ocenę za obecność. Każda kolejna nieobecność skutkuje zmniejszeniem oceny za obecność o 10%, tj. z 30% na 20%, z 20% na 10%, z 10% na 0%. <strong>Warunkiem zaliczenia zajęć jest uczestnictwo w minimum 9 zajęciach, napisanie wszystkich kolokwiów oraz przygotowanie i wygłoszenie prezentacji.</strong></p>
 </details>
 
 <details>
@@ -46,17 +46,14 @@
 </details>
 
 <details>
-	<summary class="h2">Przydatne strony</summary>
+	<summary class="h2">Prezentacja</summary>
 
-	<ul>
-		<li><a href="https://stdict.korean.go.kr/main/main.do">국립국어원 표준국어대사전</a></li>
-		<li><a href="https://dict.naver.com">네이버 사전</a></li>
-		<li><a href="http://roman.cs.pusan.ac.kr">로마자 변환기</a></li>
-		<li><a href="https://en.bab.la/dictionary/english-polish">bab.la English-Polish dictionary</a></li>
-		<li><a href="https://pl.wikipedia.org/wiki/Cudzys%C5%82%C3%B3w">Cudzysłów w języku polskim</a></li>
-		<li><a href="https://publications.europa.eu/code/pl/pl-4100100.htm">Interpunkcja w języku polskim</a></li>
-		<li><a href="https://poradniajezykowa.uw.edu.pl/porady/przecinek-na-poczatku-zdania">przecinek na początku zdania</a></li>
-	</ul>
+	<ol>
+		<li>Każdy student musi przygotować i wygłosić 18-minutową prezentację w ustalonym wcześniej terminie.</li>
+		<li>Podczas prezentacji należy przedstawić analizę wybranego przez siebie koreańskiego wytworu artystycznego oraz porównać go z podobnym wytworem artystycznym ze swojego kraju.</li>
+		<li>Prezentacja składa się z 15-minutowego wystąpienia oraz 3-minutowej dyskusji.</li>
+		<li>Plik z prezentacją oraz inne materiały należy zamieścić na Teamsach najpóźniej do godz. 19.00 w dniu poprzedzającym prezentację.</li>
+	</ol>
 </details>
 
 <h2>Plan zajęć w semestrze zimowym 2024/2025</h2>
@@ -77,17 +74,19 @@
 				<th scope="row">1</th>
 				<td>7 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 1</td>
-				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/24-25z/ljk4/zajecia/1">Arkusz 1</a></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/1">muzyka</a></td>
 			</tr>
 			<tr>
 				<th scope="row">2</th>
 				<td>14 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 2</td>
+				<td class="schedule-lecture">malarstwo</td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>21 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 3</td>
+				<td class="schedule-lecture">literatura</td>
 			</tr>
 		<tbody>
 		</tbody>
@@ -156,35 +155,76 @@
 		<tbody>
 		</tbody>
 			<tr>
-				<th scope="row">11</th>
-				<td>13 stycznia 2025</td>
-				<td class="schedule-lecture">Zajęcia 11</td>
-				<td class="schedule-lecture"></td>
+				<th scope="row" rowspan="5">11</th>
+				<td rowspan="5">13 stycznia 2025</td>
+				<td class="schedule-presentation">Prezentacja 1</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 2</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 3</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 4</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 5</td>
+				<td class="schedule-presentation"></td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
-				<th scope="row">12</th>
-				<td>20 stycznia 2025</td>
-				<td class="schedule-lecture">Zajęcia 12</td>
-				<td class="schedule-lecture"></td>
+				<th scope="row" rowspan="5">12</th>
+				<td rowspan="5">20 stycznia 2025</td>
+				<td class="schedule-presentation">Prezentacja 6</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 7</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 8</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 9</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 10</td>
+				<td class="schedule-presentation"></td>
 			</tr>
 		<tbody>
 		</tbody>
 			<tr>
-				<th scope="row">13</th>
-				<td>27 stycznia 2025</td>
-				<td class="schedule-lecture">Zajęcia 13</td>
-				<td class="schedule-lecture"></td>
+				<th scope="row" rowspan="5">13</th>
+				<td rowspan="5">27 stycznia 2025</td>
+				<td class="schedule-presentation">Prezentacja 11</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 12</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 13</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 14</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 15</td>
+				<td class="schedule-presentation"></td>
 			</tr>
 		<tbody>
-		</tbody>
-			<tr>
-				<th scope="row">14</th>
-				<td>3 lutego 2025 <nobr>(11.30–12.30)</nobr></td>
-				<td class="schedule-exam" colspan="2">Egzamin</td>
-			</tr>
-		</tbody>
 	</table>
 </div>
 
