--- a/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
@@ -17,107 +17,128 @@
 
 <div class="exam-question">
 	<h3>[1~2]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
-	<h4>1. 해가 뜨는 것을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 아침 일찍 일어났다.</h4>
+	<h4>1. 나는 오래전에 설악산을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
 	<ol>
-		<li>보아야</li>
-		<li>보려고 <strong class="correct">✓</strong></li>
-		<li>보거나</li>
-		<li>보는데</li>
+		<li>등산하고 싶다</li>
+		<li>등산해도 된다</li>
+		<li>등산할 것 같다</li>
+		<li>등산한 적이 있다</li>
 	</ol>
-	<h4>2. 무슨 일을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 열심히 하는 것이 중요하다.</h4>
+	<h4>2. 꽃이 피기 시작하는 걸 보니 봄이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
 	<ol>
-		<li>하든지 <strong class="correct">✓</strong></li>
-		<li>하도록</li>
-		<li>하다가</li>
-		<li>하더니</li>
+		<li>오곤 한다</li>
+		<li>온 모양이다</li>
+		<li>오는 편이다</li>
+		<li>온 적이 있다</li>
 	</ol>
 </div>
 
 <div class="exam-question">
 	<h3>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
-	<h4>3. 계속 웃고 다니는 걸 보니 좋은 일이 <u>있나 보다</u>.</h4>
+	<h4>3. 후배가 한 잘못을 알고 있었지만 미안해할까 봐 <u>모르는 척했다</u>.</h4>
+	<ol>
+		<li>모르는 체했다</li>
+		<li>모르는 듯했다</li>
+		<li>모르는 편이다</li>
+		<li>모르기 마련이다</li>
+	</ol>
+	<h4>4. 계속 웃고 다니는 걸 보니 좋은 일이 <u>있나 보다</u>.</h4>
 	<ol>
 		<li>있는 척한다</li>
 		<li>있을 뿐이다</li>
 		<li>있을 지경이다</li>
-		<li>있는 모양이다 <strong class="correct">✓</strong></li>
-	</ol>
-	<h4>4. 다음 주가 개강이니 방학도 다 <u>끝난 거나 마찬가지이다</u>.</h4>
-	<ol>
-		<li>끝난 셈이다 <strong class="correct">✓</strong></li>
-		<li>끝난 탓이다</li>
-		<li>끝나기 마련이다</li>
-		<li>끝나기 나름이다</li>
+		<li>있는 모양이다</li>
 	</ol>
 </div>
 
 <div class="exam-question">
 	<h3>[5~8] 다음은 무엇에 대한 글인지 고르십시오.</h3>
-	<h4>5. <img src="uj/zajecia/23-24z/ljk4/zajecia/czytanie/2/img/5.png" alt="5"></h4>
+	<h4>5. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/5.png" alt="5"></h4>
 	<ol>
-		<li>수건</li>
-		<li>침대 <strong class="correct">✓</strong></li>
-		<li>시계</li>
-		<li>신발</li>
+		<li>환경 보호</li>
+		<li>생활 예절</li>
+		<li>건강 관리</li>
+		<li>봉사 활동</li>
 	</ol>
-	<h4>6. <img src="uj/zajecia/23-24z/ljk4/zajecia/czytanie/2/img/6.png" alt="6"></h4>
+	<h4>6. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/6.png" alt="6"></h4>
 	<ol>
+		<li>병원</li>
 		<li>은행</li>
-		<li>식당 <strong class="correct">✓</strong></li>
-		<li>세탁소</li>
-		<li>편의점</li>
+		<li>여행사</li>
+		<li>체육관</li>
 	</ol>
-	<h4>7. <img src="uj/zajecia/23-24z/ljk4/zajecia/czytanie/2/img/7.png" alt="7"></h4>
+	<h4>7. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/7.png" alt="7"></h4>
 	<ol>
-		<li>자연 보호 <strong class="correct">✓</strong></li>
-		<li>시간 절약</li>
-		<li>자리 양보</li>
-		<li>안전 관리</li>
+		<li>병원</li>
+		<li>은행</li>
+		<li>가게</li>
+		<li>학원</li>
 	</ol>
-	<h4>8. <img src="uj/zajecia/23-24z/ljk4/zajecia/czytanie/2/img/8.png" alt="8"></h4>
+	<h4>8. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/8.png" alt="8"></h4>
 	<ol>
-		<li>사용 설명</li>
-		<li>배달 안내 <strong class="correct">✓</strong></li>
-		<li>이용 순서</li>
+		<li>이용 안내</li>
+		<li>구입 문의</li>
+		<li>사용 순서</li>
 		<li>교환 방법</li>
 	</ol>
 </div>
 
 <div class="exam-question">
 	<h3>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h4>
-	<h4>9. <img src="uj/zajecia/23-24z/ljk4/zajecia/czytanie/2/img/9.png" alt="9"></h4>
+	<h4>9. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/9.png" alt="9"></h4>
 	<ol>
-		<li>신청할 수 없는 책 종류가 있다. <strong class="correct">✓</strong></li>
-		<li>책이 도착하면 전화로 연락해 준다.</li>
-		<li>사월 한 달 동안 도서 신청을 받는다.</li>
-		<li>필요한 책은 이메일로 신청을 해야 한다.</li>
+		<li>여성은 봉사 활동보다 취미 활동을 더 하고 싶어 한다.</li>
+		<li>종교 활동을 하고 싶어 하는 비율은 남성이 여성보다 높다.</li>
+		<li>남녀 모두 경제 활동을 하고 싶다는 응답이 절반을 넘는다.</li>
+		<li>경제 활동보다 봉사 활동을 하고 싶어 하는 남성들이 많다.</li>
 	</ol>
-	<h4>10. <img src="uj/zajecia/23-24z/ljk4/zajecia/czytanie/2/img/10.png" alt="10"></h4>
+	<h4>10. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/10.png" alt="10"></h4>
 	<ol>
-		<li>직업의 안정성을 중요하게 생각하는 사람이 가장 적다.</li>
-		<li>월급과 적성을 중요하게 생각하는 사람의 비율이 같다.</li>
-		<li>개인의 발전보다 월급을 중요하게 생각하는 사람이 더 많다. <strong class="correct">✓</strong></li>
-		<li>근무 조건을 중요하게 생각하는 사람이 전체의 반을 넘는다.</li>
+		<li>주말에는 단체 할인을 받을 수 있다.</li>
+		<li>이 행사는 이번에 처음 열리는 행사이다.</li>
+		<li>특별권을 사면 놀이 시설 이용료가 할인된다.</li>
+		<li>지하철을 타고 가면 입장권을 싸게 살 수 있다.</li>
 	</ol>
 	<h4>11.</h4>
+	<ul>
+		<li>뇌 - mózg</li>
+		<li>기능 - funkcja</li>
+		<li>효과 - efekt</li>
+		<li>자극 - pobudzanie</li>
+		<li>평소(에) - zazwyczaj, na co dzień</li>
+		<li>유지하다 - utrzymywać (np. coś w ruchu)</li>
+	</ul>
 	<div class="topik-textbox">
-		<p>지난 13일 인주경찰서 편지 한 통이 배달되었다. 편지를 보낸 사람은 지난달 인주시를 방문했다가 지갑을 잃어버린 외국인 관광객 장 모 씨였다. 장 씨는 말이 통하지 않아 지갑을 찾는 데 어려움을 겪었다. 그때 한 경찰이 사전과 몸짓을 이용해 장 씨와 이야기하며 잃어버린 지갑을 찾는 데 도움을 주었다. 이에 장 씨가 고마움을 담은 감사 편지를 보낸 것이다.</p>
+		<p>손을 움직이는 것은 뇌와 관련이 있다. 그래서 손을 자주 움직이면 뇌 기능이 좋아질 수 있다. 특히 자주 사용하지 않는 손을 움직일 때 뇌가 더 효과적으로 자극될 수 있다. 평소에 오른손을 많이 쓴다면 왼손을, 왼손을 많이 쓴다면 오른손을 사용하는 것이다. 문을 열고 닫는 일처럼 간단한 일을 그렇게 하는 것만으로도 뇌 기능을 유지하는 데 도움이 된다.</p>
 	</div>
 	<ol>
-		<li>관광객이 경찰에게 감사하는 마음을 표현했다. <strong class="correct">✓</strong></li>
-		<li>관광객이 잃어버린 지갑을 찾지 못하고 돌아갔다.</li>
-		<li>경찰이 지갑을 잃어버린 관광객에게 편지를 썼다.</li>
-		<li>경찰이 관광객의 말을 이해하지 못해 도와줄 수 없었다.</li>
+		<li>뇌 건강과 손을 움직이는 것은 서로 관계가 없다.</li>
+		<li>우리 몸과 달리 뇌는 간단한 일로 자극받지 않는다.</li>
+		<li>뇌 활동을 위해 익숙한 방법으로 손을 쓰는 것이 더 좋다.</li>
+		<li>자주 사용하지 않던 손을 사용하면 뇌 움직임이 활발해진다.</li>
 	</ol>
 	<h4>12.</h4>
+	<ul>
+		<li>신문사 - wydawnictwo prasowe</li>
+		<li>대회 - konkurs, zawody</li>
+		<li>개최하다 - zorganizować</li>
+		<li>주제 - temat</li>
+		<li><a href="uj/zajecia/24-25z/ljk4/zajecia/1/img/원고지.jpg">원고지</a> - papier kratkowany</li>
+		<li>예선 - eliminacje</li>
+		<li>심사 - selekcja</li>
+		<li>본선 - finały</li>
+		<li>공지하다 - ogłosić</li>
+		<li>제한 - limit</li>
+		<li>제출하다 - wysłać/złożyć (np. wniosek)</li>
+	</ul>
 	<div class="topik-textbox">
-		<p>최근 공연을 혼자 보는 사람들이 많아졌다. 친구나 연인이 함께 보는 장르로 생각했던 뮤지컬, 연극 등도 혼자 보는 사람들이 늘어난 것이다. 한 조사 결과에 따르면 열 명 중 네 명이 혼자 공연을 관람하는 것으로 나타났다. 혼자 공연을 보는 사람들은 함께 간 사람에게 신경을 쓰지 않고 공연에만 집중할 수 있어서 좋다고 말한다.</p>
+		<p>아침신문사에서는 오는 12월 20일에 한국어 말하기 대회를 개최한다. 이 대회는 한국에 사는 외국인 대학생을 대상으로 하며 주제는 '나와 한국'이다. 참가를 원하는 사람은 발표할 내용을 원고지 10장 정도의 글로 써서 12월 5일까지 이메일로 보내면 된다. 예선은 원고 심사로 대신하며 본선 참가자는 홈페이지를 통해 공지할 예정이다.</p>
 	</div>
 	<ol>
-		<li>사람들은 연극과 뮤지컬을 혼자 보는 장르로 생각한다.</li>
-		<li>혼자 공연을 보면 공연에 집중할 수 있다는 장점이 있다. <strong class="correct">✓</strong></li>
-		<li>사람들은 공연을 볼 때 다른 사람에게 신경을 쓰지 않는다.</li>
-		<li>조사 결과에 따르면 공연을 혼자 보는 사람들이 줄고 있다.</li>
+		<li>대회에서 발표할 원고의 양은 제한이 없다.</li>
+		<li>외국에서 살고 있는 사람도 참가할 수 있다.</li>
+		<li>본선 참가자는 홈페이지에서 확인할 수 있다.</li>
+		<li>신청자는 신문사에 가서 원고를 제출하면 된다.</li>
 	</ol>
 </div>
 
@@ -125,65 +146,72 @@
 	<h3>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3>
 	<h4>13.</h4>
 	<ul>
-		<li>공격하다 - zaatakować</li>
-		<li>오해하다 - źle zrozumieć</li>
-		<li>받아들이다 - przyjąć do siebie</li>
+		<li>이불 - pościel</li>
+		<li>널다 - rozwiesić (np. pranie)</li>
+		<li>장(을) 보다 - robić zakupy</li>
+		<li>걷다 - zebrać (np. pranie)</li>
+		<li>보관하다 - przechowywać</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>(가) 개와 고양이는 사이가 나쁜 것으로 유명하다.</p>
-		<p>(나) 개가 앞발을 드는 행동은 함께 놀고 싶다는 의미이다.</p>
-		<p>(다) 그런데 고양이는 이런 행동을 공격하는 것으로 오해하는 것이다.</p>
-		<p>(라) 둘 사이가 안 좋은 이유는 표현을 서로 다르게 받아들이기 때문이다.</p>
+		<p>(가) 이불을 세탁해서 밖에 널어 두고 장을 보러 나갔다.</p>
+		<p>(나) 비가 오는 것을 보고 이웃이 대신 이불을 걷어 준 것이었다.</p>
+		<p>(다) 갑자기 비가 내려서 이불이 걱정되어 집으로 서둘러 돌아왔다.</p>
+		<p>(라) 도착해 보니 이불을 보관하고 있다는 메모가 문 앞에 붙어 있었다.</p>
 	</div>
 	<ol>
-		<li>(가)-(라)-(나)-(다) <strong class="correct">✓</strong></li>
-		<li>(가)-(나)-(라)-(다)</li>
-		<li>(나)-(다)-(가)-(라)</li>
-		<li>(나)-(가)-(다)-(라)</li>
+		<li>(가)-(다)-(나)-(라)</li>
+		<li>(가)-(다)-(라)-(나)</li>
+		<li>(다)-(나)-(가)-(라)</li>
+		<li>(다)-(라)-(가)-(나)</li>
 	</ol>
 	<h4>14.</h4>
 	<ul>
-		<li>시대 - czasy</li>
-		<li>업무 - praca (czynność)</li>
-		<li>주로 - głównie</li>
-		<li>공연 - przedstawienie, występ</li>
-		<li>관람하다 - obejrzeć (np. występ, wystawę, itp.)</li>
-		<li>탐방하다 - odwiedzić, zwiedzić</li>
+		<li>떨림 - drganie, dreszcze</li>
+		<li>마그네슘 - magnez</li>
+		<li>부족하다 - zabraknąć</li>
+		<li>주되다 - być głównym (np. powodem czegoś)</li>
+		<li>피로 - zmęczenie</li>
+		<li>푹 - głęboko (np. o śnie)</li>
+		<li>증상 - objaw</li>
+		<li>완화 - ustąpienie (np. o objawach)</li>
+		<li>풍부하다 - być bogatym (w coś)</li>
+		<li>견과류 - bakalie</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>(가) 시대가 변하면서 회식 문화가 바뀌고 있는 것이다.</p>
-		<p>(나) 직장에서는 좋은 업무 분위기를 위해서 회식을 한다.</p>
-		<p>(다) 예전에는 직장에서 회식을 할 때 주로 술을 많이 마셨다.</p>
-		<p>(라) 그러나 요즘에는 회식 대신에 공연을 관람하거나 맛집을 탐방하는 경우가 늘고 있다.</p>
+		<p>(가) 쉬어도 떨림이 계속된다면 마그네슘이 부족해서일 수도 있다.</p>
+		<p>(나) 눈 밑 떨림의 주된 원인은 피로이므로 푹 쉬면 증상은 완화된다.</p>
+		<p>(다) 이런 사람들은 마그네슘이 풍부한 견과류나 바나나를 먹으면 좋다.</p>
+		<p>(라) 누구나 한 번쯤은 눈 밑 떨리는 경험을 해 본 적이 있을 것이다.</p>
 	</div>
 	<ol>
-		<li>(나)-(다)-(가)-(라)</li>
-		<li>(나)-(다)-(라)-(가) <strong class="correct">✓</strong></li>
-		<li>(다)-(가)-(나)-(라)</li>
-		<li>(다)-(나)-(라)-(가)</li>
+		<li>(나)-(다)-(라)-(가)</li>
+		<li>(나)-(라)-(다)-(가)</li>
+		<li>(라)-(가)-(다)-(나)</li>
+		<li>(라)-(나)-(가)-(다)</li>
 	</ol>
 	<h4>15.</h4>
 	<ul>
-		<li>보물 - skarb</li>
-		<li>팥 - pole</li>
-		<li>파다 - kopać</li>
-		<li>실망하다 - doznać zawodu</li>
-		<li>씨 - niesiono</li>
-		<li>뿌리다 - zasiać</li>
-		<li>열매 - owoc</li>
-		<li>맺히다 - wypuścić (np. owoce)</li>
+		<li>주인 - właściciel</li>
+		<li>사과하다 - przeprosić</li>
+		<li>사정(事情) - sytuacja</li>
+		<li>사고 - wypadek</li>
+		<li>배려 - troska, uwaga</li>
+		<li>무사하다 - być w stanie nienaruszonym, być bezpiecznym</li>
+		<li>치료 - opieka zdrowotna, leczenie</li>
+		<li>데리다 - zabrać (np. kogoś dokądś)</li>
+		<li>부딪치다 - zderzyć się</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>(가) 아들은 보물을 찾기 위해 팥을 파 봤지만 아무것도 나오지 않았다.</p>
-		<p>(나) 아들은 실망했지만 힘들게 밭을 판 것이 아까워서 밭에 씨를 뿌렸다.</p>
-		<p>(다) 한 농부가 게으른 아들에게 밭에 보물을 숨겼다는 말을 남기고 죽었다.</p>
-		<p>(라) 시간이 흘러 많은 열매가 맺혔고 아들은 그때서야 아버지의 뜻을 알게 되었다.</p>
+		<p>(가) 차에서 내려 앞차의 주인에게 사과하고 사정을 설명했다.</p>
+		<p>(나) 앞차 주인은 큰 사고가 아니니 괜찮다며 그냥 가라고 했다.</p>
+		<p>(다) 친절한 배려 덕분에 딸은 무사히 병원에 도착해 치료를 받았다.</p>
+		<p>(라) 아픈 딸을 병원으로 급하게 데려다가 앞차와 부딪쳐서 사고를 냈다.</p>
 	</div>
 	<ol>
-		<li>(가)-(라)-(나)-(다)</li>
-		<li>(가)-(나)-(라)-(다)</li>
-		<li>(다)-(가)-(나)-(라) <strong class="correct">✓</strong></li>
-		<li>(다)-(나)-(가)-(라)</li>
+		<li>(나)-(가)-(다)-(라)</li>
+		<li>(나)-(가)-(라)-(다)</li>
+		<li>(라)-(가)-(나)-(다)</li>
+		<li>(라)-(가)-(다)-(나)</li>
 	</ol>
 </div>
 
@@ -191,102 +219,107 @@
 	<h3>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
 	<h4>16.</h4>
 	<ul>
-		<li>꺼리다 - unikać</li>
-		<li>본능 - instynkt</li>
-		<li>독성 - trucizna</li>
-		<li>해롭다 - być szkodliwym (dla czegoś)</li>
-		<li>무의식적으로 - podświadomie</li>
-		<li>여기다 - uważać (coś za coś)</li>
-		<li>거부하다 - odmówić</li>
-		<li>지나치다 - być przesadnym/nadmiernym</li>
-		<li>과식 - przejadanie się</li>
-		<li>멀리하다 - trzymać się z daleka (od czegoś)</li>
-		<li>막다 - zapobiec (czemuś)</li>
+		<li>악보 - nuty</li>
+		<li>공연하다 - występować</li>
+		<li>전통 - tradycja</li>
+		<li>일부 - niektórzy</li>
+		<li>작곡가 - kompozytor</li>
+		<li>결국 - w końcu, w rezultacie</li>
+		<li>작품 - dzieło</li>
+		<li>표현 - wyrażanie (np. uczuć)</li>
+		<li>-력(力) - siła (czegoś)</li>
+		<li>풍성하다 - być bogatym/obfitym</li>
+		<li>장단점 - mocne i słabe strony, plusy i minusy</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>사람들은 일반적으로 쓴맛을 꺼린다. 이것은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 본능과 관계가 있다. 식물 중에는 독성이 있어 몸에 해로운 것들이 있다. 그런데 이런 독이 있는 식물은 보통 쓴맛이 난다. 따라서 사람들은 무의식적으로 쓴맛이 나는 것을 위험하다고 여기고 이를 거부하게 되는 것이다.</p>
+		<p>악보 없이 공연하는 것은 피아니스트들의 오랜 전통이다. 이에 대해 일부 사람들은 악보를 외우는 것보다는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 시간을 써야 한다고 말한다. 그러나 악보를 외우면 작곡가를 좀 더 이해하게 되어 결국 작품에 대한 표현력이 풍성해질 수 있다.</p>
 	</div>
 	<ol>
-		<li>지나친 과식을 피하려는</li>
-		<li>자신의 몸을 보호하려는 <strong class="correct">✓</strong></li>
-		<li>맛없는 음식을 멀리하려는</li>
-		<li>입맛이 변하는 것을 막으려는</li>
+		<li>전통을 이해하는 데에</li>
+		<li>표현력을 높이는 데에</li>
+		<li>공연을 기획하는 데에</li>
+		<li>장단점을 설명하는 데에</li>
 	</ol>
 	<h4>17.</h4>
 	<ul>
-		<li>원활하게 - płynnie, bez przeszkód</li>
-		<li>긍정 - potwierdzenie, afirmacja</li>
-		<li>존중하다 - szanować</li>
-		<li>공감하다 - zgadzać się (z kimś/czymś)</li>
-		<li>인상 - wrażenie</li>
-		<li>손뼉을 치다 - klaskać</li>
-		<li>고개를 끄덕이다 - kiwać głową</li>
-		<li>기록하다 - zapisywać, robić notatki</li>
+		<li>능력 - umiejętność</li>
+		<li>밀접하다 - być bliskim</li>
+		<li>동작 - ruch</li>
+		<li>장치 - urządzenie</li>
+		<li>조언하다 - radzić (coś komuś)</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>대화를 원활하게 하기 위해서는 상대방에게 내가 그의 말을 잘 듣고 있다는 느낌을 주어야 한다. 이때 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 행동을 하면 좋다. 대부분의 나라에서 이런 행동은 긍정을 나타낸다. 따라서 머리를 위아래로 움직이는 행동을 하면 상대방을 존중하고 이야기에 공감하고 있다는 인상을 줄 수 있다.</p>
+		<p>언어를 사용하는 능력은 손가락과 밀접한 관련성이 있다. 손가락을 움직이는 동작은 단순한 행동에 불과한 것이 아니라 어휘 기억 장치의 문을 여는 열쇠와 같은 역할을 한다. 그러므로 손가락이 불편한 사람들은 평소보다 필요한 단어를 떠올리는 시간이 길어진다. 말을 잘하기 위해서 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 조언하는 것도 이런 이유 때문이다.</p>
 	</div>
 	<ol>
-		<li>손뼉을 치는</li>
-		<li>고개를 끄덕이는 <strong class="correct">✓</strong></li>
-		<li>질문하면서 듣는</li>
-		<li>들으면서 기록하는</li>
+		<li>손동작을 많이 사용하라고</li>
+		<li>손가락을 먼저 생각하라고</li>
+		<li>필요한 단어를 잘 선택하라고</li>
+		<li>어휘의 의미를 잘 기억하라고</li>
 	</ol>
 	<h4>18.</h4>
 	<ul>
-		<li>여부</li>
-		<li>수집하다 - zbierać, kolekcjonować</li>
-		<li>정도를 넘다 - przekroczyć granicę (czegoś)</li>
-		<li>방해 - przeszkoda</li>
-		<li>행동 장애 - zaburzenia behawioralne</li>
-		<li>충분히 - wystarczająco</li>
-		<li>지나치게 - zbyt, nazbyt</li>
-		<li>집착하다 - mieć obsesję (na jakimś punkcie)</li>
-		<li>안정 - stabilność</li>
-		<li>피하다 - unikać</li>
+		<li>원래 - pierwotnie</li>
+		<li>악수 - podanie ręki</li>
+		<li>상대 - druga osoba</li>
+		<li>안심 - uspokojenie</li>
+		<li>중세 - średniowiecze</li>
+		<li>기사 - rycerz</li>
+		<li>무기 - broń</li>
+		<li>적 - przeciwnik</li>
+		<li>꺼내다 - wyciągnąć</li>
+		<li>안전 - bezpieczeństwo</li>
+		<li>확인 - sprawdzenie</li>
+		<li>존중 - szacunek</li>
+		<li>표시하다 = 보여주다</li>
+		<li>인사 - przywitanie</li>
+		<li>구하다 = 찾다</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>사용 여부에 관계없이 물건을 못 버리고 저장해 두는 사람들이 있다. 습관이나 취미로 수집하는 정도를 넘어 생활에 방해가 될 정도로 심할 경우 이는 치료가 필요한 행동 장애로 본다. 연구에 따르면 주변 사람들에게 사랑을 충분히 받지 못한 사람이 물건에 지나치게 집착한다고 한다. 따라서 인간 관계에서 안정을 찾으면 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 행동은 사라질 수 있다.</p>
+		<p>원래 악수는 상대를 안심시키기 위한 행동이었다. 중세 시대의 기사들은 칼과 같은 무기를 가지고 다니다가 적과 싸울 때 꺼내 들었다. 하지만 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 때에는 악수를 하면서 손에 무기가 없음을 보여 주었다. 이렇게 안전을 확인시켜 주기 위한 행동이 오늘날에는 반가움과 존중을 표시하는 인사법이 되었다.</p>
 	</div>
 	<ol>
-		<li>사람들을 피하려고 하는</li>
-		<li>불필요한 물건들을 사는</li>
-		<li>물건들을 집에 쌓아 두는 <strong class="correct">✓</strong></li>
-		<li>쓰레기를 함부로 버리는</li>
+		<li>싸울 생각이 없을</li>
+		<li>상대의 도움을 받았을</li>
+		<li>자신의 잘못을 사과할</li>
+		<li>무기를 새로 구해야 할</li>
 	</ol>
 </div>
 
 <div class="exam-question">
 	<h3>[19~20]. 다음을 읽고 물음에 답하십시오.</h3>
 	<ul>
-		<li>회원 - członek, użytkownik</li>
-		<li>가입 - rejestracja</li>
-		<li>설정하다 - ustawić</li>
-		<li>보안 - bezpieczeństwo</li>
-		<li>강화 - wzmocnienie</li>
-		<li>특수 문자 - znaki specjalne</li>
-		<li>주기적 - regularny</li>
-		<li>번거롭다</li>
-		<li>개인 정보 보호 - ochrona danych osobowych</li>
-		<li>요구하다 - żądać, wymagać</li>
-		<li>투자하다 - inwestować</li>
+		<li>흥미 - zainteresowanie</li>
+		<li>내세우다 - kłaść nacisk (na coś)</li>
+		<li>홍보하다 - promować</li>
+		<li>전략 - strategia</li>
+		<li>주목받다 - przykuwać uwagę, być w centrum uwagi</li>
+		<li>소비자 - konsument</li>
+		<li>호기심 - ciekawość</li>
+		<li>자극하다 - pobudzić, stymulować</li>
+		<li>품질 - jakość</li>
+		<li>기대 - oczekiwania, wymagania</li>
+		<li>미치다 - sprostać (czemuś)</li>
+		<li>관심을 끌다 - wzbudzić zainteresowanie</li>
+		<li>감소하다 - zmniejszyć się</li>
+		<li>요구 - wymagania, żądania</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>인터넷으로 회원 가입을 할 때 설정하는 비밀번호는 초기에는 숫자 네 개면 충분했다. 하지만 최근에는 보안 강화를 위해 특수 문자까지 넣어 만들어야 한다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 비밀번호 변경도 주기적으로 해야 한다. 이 때문에 가입자는 번거로운 것은 물론이고 자주 바뀌는 비밀번호를 기억하지 못해 스트레스를 받는다. 개인 정보 보호를 가입자에게만 요구하지 말고 기업도 보안 기술 개발에 적극 투자해야 한다.</p>
+		<p>흥미와 재미 요소를 내세워 홍보하는 마케팅 전략이 주목받고 있다. 이런 마케팅은 소비자의 호기심을 자극해 구매로 이어지게 한다. 그러나 제품의 품질이 소비자의 기대에 미치지 못하는 경우 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 브랜드 이미지까지 나빠지기도 한다. 실제로 한 햄버거 회사에서 '주머니 버거', '눌러 먹는 버거'를 만들어 소비자의 관심을 끌었지만 품질이 기대에 못 미치자 회사의 다른 제품까지 판매가 감소한 경우가 있었다.</p>
 	</div>
 	<h4>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4>
 	<ol>
-		<li>그러면</li>
-		<li>게다가 <strong class="correct">✓</strong></li>
-		<li>반면에</li>
-		<li>이처럼</li>
+		<li>과연</li>
+		<li>비록</li>
+		<li>차라리</li>
+		<li>오히려</li>
 	</ol>
-	<h4>20. 위 글의 내용과 같은 것을 고르십시오.</h4>
+	<h4>20. 윗글의 주제로 가장 알맞은 것을 고르십시오.</h4>
 	<ol>
-		<li>가입자는 비밀번호 변경으로 스트레스를 받는다. <strong class="correct">✓</strong></li>
-		<li>초기의 비밀번호는 숫자 네 개로는 만들 수 없었다.</li>
-		<li>가입자는 기업에 비밀번호 설정을 까다롭게 요구한다.</li>
-		<li>비밀번호 설정 시에 숫자와 문자 중 하나를 선택해야 한다.</li>
+		<li>마케팅도 중요하지만 제품의 품질이 더 중요하다.</li>
+		<li>식품 기업은 먼저 소비자의 요구를 확인해야 한다.</li>
+		<li>제품에 재미 요소를 포함하는 마케팅 전략이 필요하다.</li>
+		<li>특이한 제품보다 소비자에게 익숙한 것이 홍보에 더 좋다.</li>
 	</ol>
 </div>
 
