--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -133,8 +133,8 @@
 				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/5">Greeting and Etiquette</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="5">10</th>
-				<td rowspan="5">13 January 2026</td>
+				<th scope="row" rowspan="4">10</th>
+				<td rowspan="4">13 January 2026</td>
 				<td class="schedule-exam">Test 2</td>
 				<td class="schedule-exam">Korean Family; Greeting and Etiquette</td>
 			</tr>
@@ -144,25 +144,25 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 2</td>
-				<td class="schedule-presentation">Yuliia Tsybulko</td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Presentation 3</td>
 				<td class="schedule-presentation">Bartłomiej Kura - Confucianism and Corporate Culture: The Case of South Korean <i>Chaebol</i></td>
 			</tr>
 			<tr>
-				<td class="schedule-presentation">Presentation 4</td>
+				<td class="schedule-presentation">Presentation 3</td>
 				<td class="schedule-presentation">Beniamin Bracki - Ritual and Music: <i>Jongmyo Jeryeak</i> in Korea's Confucian Tradition</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="4">12</th>
-				<td rowspan="4">20 January 2026</td>
+				<th scope="row" rowspan="5">12</th>
+				<td rowspan="5">20 January 2026</td>
+				<td class="schedule-presentation">Presentation 4</td>
+				<td class="schedule-presentation">Yuliia Tsybulko - Confucian roots and the contemporary education in South Korea</td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Presentation 5</td>
 				<td class="schedule-presentation">Wiktoria Wabik - Confucianism vs. Individualism: Value Conflicts in Modern Korean Society</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 6</td>
-				<td class="schedule-presentation">Julia Zioło</td>
+				<td class="schedule-presentation">Julia Zioło - The Price of Virtue: The <i>Yeolnyeo</i> Ideal and Female Sacrifice in Korean Confucian Thought</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 7</td>
@@ -180,7 +180,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 10</td>
-				<td class="schedule-presentation">Marta Gałązkiewicz</td>
+				<td class="schedule-presentation">Marta Gałązkiewicz - The Sewol ferry incident: Confucianism in face of a tragedy</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 11</td>
@@ -188,11 +188,11 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 12</td>
-				<td class="schedule-presentation">Amelia Denasiewicz -  The Meaning of South Korean flag and Confucian Symbolism on It</td>
+				<td class="schedule-presentation">Amelia Denasiewicz - The Meaning of South Korean flag and Confucian Symbolism on It</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 13</td>
-				<td class="schedule-presentation">Zuzanna Szczypczyk</td>
+				<td class="schedule-presentation">Zuzanna Szczypczyk - Education Fever (교육열): Its Origins and Connection to Confucian Educational Ideals</td>
 			</tr>
 		</tbody>
 	</table>
