--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
@@ -251,7 +251,7 @@
 <p>24. 남성 응답자는 여성의 ‘경제 관념’(29.5%)이 가장 중요하다고 답했고 ‘자녀관’(23.6%), ‘정치 성향’(18.7%), ‘가사에 대한 인식’(15.1%)이 뒤를 이었다. </p>
 <p>25. 남녀가 소개팅하기 전에 ‘어느 당을 지지하는지’를 묻는 풍속도 생겨난 상태라고 한다.</p>
 
-<hr>
+<hr class="homework">
 
 <h3>어휘</h3>
 
