--- a/uj/zajecia/24-25z/assk/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/assk/zajecia/1/index.html
@@ -13,7 +13,7 @@
 
 <h1>Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</h1>
 
-<h2>이현준 - 유통기한</h2>
+<h2>Lee Hyun Jun (이현준) - Data ważności (유통기한)</h2>
 
 <ul class="gallery">
 	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/7Wgc0wV51Rc"><img src="uj/zajecia/24-25z/assk/zajecia/1/img/7Wgc0wV51Rc.webp" alt="이현준 - 유통기한 [LIVE]"></a></li>
@@ -24,7 +24,7 @@
 <div class="exam-question">
 	<p>1. 집 안에 누워 있던 할머니</p>
 	<ul>
-		<li>Babia leząca w domu</li>
+		<li>Babcia leżąca w domu</li>
 	</ul>
 	<p>2. 늘 혼자 저녁에나 들어오신 엄마한테 물었어</p>
 	<ul>
