--- a/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
@@ -22,12 +22,12 @@
 		<li>등산하고 싶다</li>
 		<li>등산해도 된다</li>
 		<li>등산할 것 같다</li>
-		<li>등산한 적이 있다</li>
+		<li>등산한 적이 있다 <strong class="correct">✓</strong></li>
 	</ol>
 	<h4>2. 꽃이 피기 시작하는 걸 보니 봄이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
 	<ol>
 		<li>오곤 한다</li>
-		<li>온 모양이다</li>
+		<li>온 모양이다 <strong class="correct">✓</strong></li>
 		<li>오는 편이다</li>
 		<li>온 적이 있다</li>
 	</ol>
@@ -37,7 +37,7 @@
 	<h3>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
 	<h4>3. 후배가 한 잘못을 알고 있었지만 미안해할까 봐 <u>모르는 척했다</u>.</h4>
 	<ol>
-		<li>모르는 체했다</li>
+		<li>모르는 체했다 <strong class="correct">✓</strong></li>
 		<li>모르는 듯했다</li>
 		<li>모르는 편이다</li>
 		<li>모르기 마련이다</li>
@@ -47,7 +47,7 @@
 		<li>있는 척한다</li>
 		<li>있을 뿐이다</li>
 		<li>있을 지경이다</li>
-		<li>있는 모양이다</li>
+		<li>있는 모양이다 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -56,27 +56,27 @@
 	<h4>5. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/5.png" alt="5"></h4>
 	<ol>
 		<li>환경 보호</li>
-		<li>생활 예절</li>
+		<li>생활 예절 <strong class="correct">✓</strong></li>
 		<li>건강 관리</li>
 		<li>봉사 활동</li>
 	</ol>
 	<h4>6. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/6.png" alt="6"></h4>
 	<ol>
 		<li>병원</li>
-		<li>은행</li>
+		<li>은행 <strong class="correct">✓</strong></li>
 		<li>여행사</li>
 		<li>체육관</li>
 	</ol>
 	<h4>7. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/7.png" alt="7"></h4>
 	<ol>
 		<li>병원</li>
-		<li>은행</li>
+		<li>은행 <strong class="correct">✓</strong></li>
 		<li>가게</li>
 		<li>학원</li>
 	</ol>
 	<h4>8. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/8.png" alt="8"></h4>
 	<ol>
-		<li>이용 안내</li>
+		<li>이용 안내 <strong class="correct">✓</strong></li>
 		<li>구입 문의</li>
 		<li>사용 순서</li>
 		<li>교환 방법</li>
@@ -87,7 +87,7 @@
 	<h3>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h4>
 	<h4>9. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/9.png" alt="9"></h4>
 	<ol>
-		<li>여성은 봉사 활동보다 취미 활동을 더 하고 싶어 한다.</li>
+		<li>여성은 봉사 활동보다 취미 활동을 더 하고 싶어 한다. <strong class="correct">✓</strong></li>
 		<li>종교 활동을 하고 싶어 하는 비율은 남성이 여성보다 높다.</li>
 		<li>남녀 모두 경제 활동을 하고 싶다는 응답이 절반을 넘는다.</li>
 		<li>경제 활동보다 봉사 활동을 하고 싶어 하는 남성들이 많다.</li>
